--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
     <script src="https://kit.fontawesome.com/ad05a5e3df.js"></script>
-    <title>Etusivusi | Sinulle Räätälöity Internetin Etusivu</title>
+    <title>ETUSIVUSI | Sinulle Räätälöity Internetin Etusivu</title>
   </head>
   <body>
     <noscript>Palvelu vaatii JavaScriptin käyttöönoton.</noscript>
